tests/should_fail/unreachable_pattern.luma
-- Unreachable pattern: wildcard makes subsequent patterns unreachable
let x = 1
match x do
  _ do print("wildcard") end
  0 do print("zero") end
end
